Deleted old images, downloaded new images, updated character list, and updated seasonal constants.

--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
                                 <p class="update-time">Last Updated: {{ time }}</p>
                             </div>
                         </h3>
-                        <h3 class="title-class banner-text {{ character.char_class.lower().replace(' ', '-') }}">{{ character.cov }} {{ character.race }} {{ character.char_class }}</h3>
+                        <h3 class="title-class banner-text {{ character.char_class.lower().replace(' ', '-') }}">{{ character.race }} {{ character.char_class }}</h3>
                     </div>
                 </div>
             </div>
