--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
     <!-- Wowhead scripts -->
-    <script>const whTooltips = {iconizeLinks: false};</script>
+    <script>const whTooltips = {iconizeLinks: true, iconSize: 'medium'};</script>
     <script src="https://wow.zamimg.com/widgets/power.js"></script>
 
     <!-- JQuery & Loading Page -->
@@ -53,11 +53,6 @@
             </div>
         </div>
     </nav>
-
-<!--    {% set navigation_bar = [] %}-->
-<!--    {% for key in character_list %}-->
-<!--        navigation_bar.append((url_for('stats', character=key), key))-->
-<!--    {% endfor %}-->
 
     <div id="content">
         <nav id="sidebarMenu" class="collapse d-lg-block sidebar">
@@ -115,17 +110,16 @@
                         </h3>
                         <div class="card-body">
                             {% for item in character.gear %}
-                            <a class="gear" href="//www.wowhead.com/item={{ item['id'] }}&ilvl={{ item['ilvl'] }}">
                                 <div class="row gear-row">
                                         <div class="col-sm-10 align-self-center">
-                                            <img class="gear-icon" src="{{ item['img'] }}">
+                                            <a class="gear" href="//www.wowhead.com/item={{ item['id'] }}&ilvl={{ item['ilvl'] }}">
                                             <p class="gear-name {{ item['quality'] }}">{{ item['name'] }}</p>
+                                            </a>
                                         </div>
                                         <div class="col-sm-2 align-self-center">
                                             <p class="gear-lvl {{ item['quality'] }}">{{ item['ilvl'] }}</p>
                                         </div>
                                 </div>
-                            </a>
                             {% endfor %}
                         </div>
                     </div>
@@ -135,12 +129,12 @@
                         <div class="card-body">
                             <div class="pve-talents">
                                 {% for talent in character.talents['pve'] %}
-                                <a href="//www.wowhead.com/spell={{ talent['id'] }}"><img class="talent-icon" src="{{ talent['img'] }}"></a>
+                                <a href="//www.wowhead.com/spell={{ talent['id'] }}"></a>
                                 {% endfor %}
                             </div>
                             <div class="pvp-talents">
                                 {% for talent in character.talents['pvp'] %}
-                                <a href="//www.wowhead.com/spell={{ talent['id'] }}"><img class="talent-icon" src="{{ talent['img'] }}"></a>
+                                <a href="//www.wowhead.com/spell={{ talent['id'] }}"></a>
                                 {% endfor %}
                             </div>
                         </div>
