Updated for patch 10.1

--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
                                     {% for boss in character.raid_logs['bosses'] %}
                                     <div class="boss-group">
                                         <p class="parse {{ boss['quality'] }}">{{ boss['parse'] }}</p>
-                                        <img class="talent-icon" src="/static/images/raid-bosses/{{ boss['id'] }}.jpg" title="{{ boss['name'] }}">
+                                        <img class="talent-icon" src="/static/images/raid-bosses/{{ boss['id'] }}-icon.jpg" title="{{ boss['name'] }}">
                                     </div>
                                     {% endfor %}
                                 </div>
